// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard Xlarge / multi line - (No X/Y Label) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "1056px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 jhGeEa"
            size="XLARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard empty 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            No data is available for this time range.
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard empty for a range 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard isEditable 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 ibJuFK"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / 5 years 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / LOCALE DATE 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / multi line - (Custom color) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 ecCcTY"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / multi line - (No X/Y Label) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 ecCcTY"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / multi line - no interval 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 ecCcTY"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / single line - interval day (High Temperature number) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / single line - interval day (Low Pressure number) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-Pressure"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Pressure"
          >
            Pressure
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / single line - interval day (Month) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / single line - interval day (Week) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / single line - interval hour (Diff day) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / single line - interval hour (Same day) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / single line - interval month (Year/ Diff Year) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / single line - interval month (Year/ Same Year) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / single line - year interval (One data point) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard large / units 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="LARGE"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / multi line - (No X/Y Label) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 ecCcTY"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / multiple line - interval month (Year/ Same Year) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 ecCcTY"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single line - interval day (Month) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single line - interval day (Same Month) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single line - interval day (Week) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single line - interval day 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single line - interval hour (Diff day) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single line - interval hour (Same day) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single line - interval hour 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single line - interval month (Year/ Diff Year) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single line - interval month (Year/ Same Year) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single line - interval year (Two data point) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 ecCcTY"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single line - timeRange dayByHour 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <span
              className="Card__TimeRangeLabel-v5r71h-9 ebXFRr"
              id="timeRange"
            >
              Last 7 days
            </span>
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="Card__StyledOverflowMenu-v5r71h-8 gdmWMK bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TimeSeriesCard medium / single point - interval hour 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facility-temperature"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Temperature"
          >
            Temperature
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="TimeSeriesCard__LineChartWrapper-q25vbg-0 hkbzeE"
            size="MEDIUM"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
